even simpler form

--- a/infra/cloudformation.yml
+++ b/infra/cloudformation.yml
@@ -16,5 +16,6 @@ Resources:
               - PUT
               - DELETE
               - HEAD
+              - OPTIONS
             AllowedHeaders: 
               - "*"
